--- a/.github/workflows/main_cs519project.yml
+++ b/.github/workflows/main_cs519project.yml
@@ -2,6 +2,11 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
 name: Build and deploy Node.js app to Azure Web App - CS519Project
+env:
+  AZURE_WEBAPP_NAME: 'CS519Project'
+  WEBAPP_PACKAGE_PATH: 'Node/WEB'
+  FRONTEND_PACKAGE_PATH: 'Node/WEB/frontend'
+  NODE_VERSION: '20.x'
 
 on:
   push:
@@ -12,34 +17,30 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./Node/WEB/frontend
-
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
-
-      - name: npm install, build, and test
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: './Node/WEB/package.json'
+        
+      - name: npm install react frontend
+        working-directory: ./Node/WEB/frontend
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+          npm run build
+          rm -r public
+          rm -r node_modules
+          rm -r src
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,9 +56,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v1
@@ -70,7 +68,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'CS519Project'
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
           slot-name: 'Production'
-          package: .
+          package: ${{ env.WEBAPP_PACKAGE_PATH }}
           
