--- a/.github/workflows/azure_container.yml
+++ b/.github/workflows/azure_container.yml
@@ -1,73 +1,47 @@
-# This workflow will build a container and deploy it to an Azure Functions App on Linux when a commit is pushed to your default branch.
-#
-# This workflow assumes you have already created the target Azure Functions app.
-# For instructions see https://learn.microsoft.com/en-us/azure/azure-functions/functions-create-function-linux-custom-image?tabs=in-process%2Cbash%2Cazure-cli&pivots=programming-language-csharp
-#
-# To configure this workflow:
-# 1. Set up the following secrets in your repository:
-#   - AZURE_RBAC_CREDENTIALS
-#   - REGISTRY_USERNAME
-#   - REGISTRY_PASSWORD
-# 2. Change env variables for your configuration.
-#
+name: Trigger auto deployment for cs519containerapp
 
-name: Deploy container to Azure Functions App
-
+# When this action will be executed
 on:
+  # Automatically trigger it when detected changes in repo
   push:
-    branches: ["default"]
+    branches: 
+      [ main ]
+    paths:
+    - 'Node/API2/**'
+    - '.github/workflows/cs519containerapp-AutoDeployTrigger-d9e619e8-4ba2-475a-87a0-d677d2819868.yml'
 
-permissions:
-  contents: read
-
-env:
-  AZURE_FUNCTIONAPP_NAME: 'your-app-name'   # set this to your function app name on Azure
-  LOGIN_SERVER: 'login-server'              # set this to login server for your private container registry (e.g. 'contoso.azurecr.io', 'index.docker.io' )
-  REGISTRY: 'your-registry'                 # set this to proper value for REGISTRY
-  NAMESPACE: 'your-namespace'               # set this to proper value for NAMESPACE
-  IMAGE: 'your-image'                       # set this to proper value for IMAGE
-  TAG: 'your-tag'                           # set this to proper value for TAG
+  # Allow manual trigger 
+  workflow_dispatch:      
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: dev
+    permissions: 
+      id-token: write #This is required for requesting the OIDC JWT Token
+      contents: read #Required when GH token is used to authenticate with private repo
+
     steps:
-    - name: 'Checkout GitHub Action'
-      uses: actions/checkout@v3
+      - name: Checkout to the branch
+        uses: actions/checkout@v2
 
-    - name: 'Login via Azure CLI'
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_RBAC_CREDENTIALS }}
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.CS519CONTAINERAPP_AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.CS519CONTAINERAPP_AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.CS519CONTAINERAPP_AZURE_SUBSCRIPTION_ID }}
 
-    - name: 'Docker Login'
-      uses: azure/docker-login@v1
-      with:
-        login-server: ${{ env.LOGIN_SERVER }}
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Build and push container image to registry
+        uses: azure/container-apps-deploy-action@v2
+        with:
+          appSourcePath: ${{ github.workspace }}/Node/API2 
+          registryUrl: cs519containerregistry.azurecr.io
+          registryUsername: ${{ secrets.CS519CONTAINERAPP_REGISTRY_USERNAME }}
+          registryPassword: ${{ secrets.CS519CONTAINERAPP_REGISTRY_PASSWORD }}
+          containerAppName: cs519containerapp
+          resourceGroup: BU_CS519_Fall_2023_Project
+          imageToBuild: cs519containerregistry.azurecr.io/cs519containerapp:${{ github.sha }}
+          _buildArgumentsKey_: |
+            _buildArgumentsValues_
 
-    - name: 'Compose Customized Docker Image'
-      shell: bash
-      run: |
-        # If your function app project is not located in your repository's root
-        # Please change the path to your directory for docker build
-        docker build . -t ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.IMAGE }}:${{ env.TAG }}
-        docker push ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.IMAGE }}:${{ env.TAG }}
 
-    - name: 'Run Azure Functions Container Action'
-      uses: Azure/functions-container-action@v1
-      id: fa
-      with:
-        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        image: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.IMAGE }}:${{ env.TAG }}
-
-    # If you want to display or use the functionapp url, then uncomment the task below
-    #- name: 'Published functionapp url'
-    #  run: |
-    #    echo "${{ steps.fa.outputs.app-url }}"
-
-    - name: Azure logout
-      run: |
-        az logout
