--- a/Node/API1/package.json
+++ b/Node/API1/package.json
@@ -14,6 +14,8 @@
     "@azure/functions": "^3.0.0",
     "azure-functions-core-tools": "^4.x",
     "@types/node": "16.x",
+    "@azure/identity": "4.0.1",
+    "@azure/keyvault-secrets": "4.8.0",
     "typescript": "^4.0.0"
   }
 }
