--- a/Node/API1/package.json
+++ b/Node/API1/package.json
@@ -9,7 +9,14 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "@azure/functions": "^3.0.0",
+    "azure-functions-core-tools": "^4.x",
+    "@types/node": "16.x",
+    "@azure/identity": "4.0.1",
+    "@azure/keyvault-secrets": "4.8.0",
+    "typescript": "^4.0.0"
+  },
   "devDependencies": {
     "@azure/functions": "^3.0.0",
     "azure-functions-core-tools": "^4.x",
